demo code/VB/DLBT.bas


Declare Function DLBT_Downloader_GetDownloadedBytes Lib "DLBT.dll" (ByVal hDownloader As Long) As UINT64
Declare Function DLBT_Downloader_GetUploadedBytes Lib "DLBT.dll" (ByVal hDownloader As Long) As UINT64
Declare Function DLBT_Downloader_GetDownloadSpeed Lib "DLBT.dll" (ByVal hDownloader As Long) As Long
Declare Function DLBT_Downloader_GetUploadSpeed Lib "DLBT.dll" (ByVal hDownloader As Long) As Long

' 获得该任务的节点的数目，数目的参数为int的指针，如果不想要某个值，则传NULL
Declare Sub DLBT_Downloader_GetPeerNums Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                    ByRef connectedCount As Long, _
                                                    ByRef totalSeedCount As Long, _
                                                    ByRef seedsConnected As Long, _
                                                    ByRef inCompleteCount As Long, _
                                                    ByRef totalCurrentSeedCount As Long, _
                                                    ByRef totalCurrentPeerCount As Long)


' 单个种子中包含多个文件时的一些接口,index为文件的序列号，从0开始
Declare Function DLBT_Downloader_GetFileCount Lib "DLBT.dll" (ByVal hDownloader As Long) As Long
Declare Function DLBT_Downloader_GetFileSize Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal Index As Long) As UINT64
Declare Function DLBT_Downloader_GetFileOffset Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal Index As Long) As UINT64
Declare Function DLBT_Downloader_IsPadFile Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal Index As Long) As Boolean
' 获取指定序号的文件名称
Declare Function DLBT_Downloader_GetFilePathName Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                                ByVal Index As Long, _
                                                                ByVal pBuffer As Long, _
                                                                ByRef pBufferSize As Long, _
                                                                ByVal needFullPath As Boolean) As Long
                                                                
' 该函数会将下载目录下存在，但torrent记录中不存在的文件全部删除，对单个文件的种子无效。请慎重使用。
Declare Function DLBT_Downloader_DeleteUnRelatedFiles Lib "DLBT.dll" (ByVal hDownloader As Long) As Long
                                                                
                                                                
' 获取每个文件的Hash值，只有制作种子时使用bUpdateExt才能获取到
Declare Function DLBT_Downloader_GetFileHash Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                             ByVal Index As Long, _
                                                             ByVal pBuffer As String, _
                                                             ByRef pBufferSize As Long) As Long

                                                                
' // 取文件的下载进度，该操作需要进行较多操作，建议仅在必要时使用
Declare Function DLBT_Downloader_GetFileProgress Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal Index As Long) As Single

Public Enum DLBT_FILE_PRIORITIZE
    DLBT_FILE_PRIORITY_CANCEL = 0               ' 取消该文件的下载
    DLBT_FILE_PRIORITY_NORMAL = 1               ' 正常优先级
    DLBT_FILE_PRIORITY_ABOVE_NORMAL = 2         ' 高优先级
    DLBT_FILE_PRIORITY_MAX = 3                  ' 最高优先级（如果有该优先级的文件还未下完，不会下载低优先级的文件）
End Enum

' 设置文件的下载优先级，比如可以用于取消某个指定文件的下载,index表示文件的序号
Declare Function DLBT_Downloader_SetFilePrioritize Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                            ByVal Index As Long, _
                                                            ByVal prioritize As DLBT_FILE_PRIORITIZE, _
                                                            ByVal bDoPriority As Boolean) As Long

' 立即应用优先级的设置
Declare Sub DLBT_Downloader_ApplyPrioritize Lib "DLBT.dll" (ByVal hDownloader As Long)

' 获取当前每个分块的状态，比如可以用于判断是否需要去更新（是否已经拥有了该块）。
Declare Function DLBT_Downloader_GetPiecesStatus Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                ByRef pieceArray As Byte, _
                                                ByVal arrayLength As Long, _
                                                ByRef pieceDownloaded As Long) As Long

' 设置Piece（分块）的下载优先级，比如可以用于取消某些分块的下载，从指定位置开始下载等。index表示分块的序号
Declare Function DLBT_Downloader_SetPiecePrioritize Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                ByVal Index As Long, _
                                                ByVal prioritize As DLBT_FILE_PRIORITIZE, _
                                                ByVal bDoPriority As Boolean) As Long

' 设置手工指定的Peer信息
Declare Sub DLBT_Downloader_AddPeerSource Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal ip As String, ByVal port As Integer)


' 获得可显示的文件Hash值
Declare Function DLBT_Downloader_GetInfoHash Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                ByVal pBuffer As String, _
                                                ByRef pBufferSize As Long) As Long

Declare Function DLBT_Downloader_GetPieceCount Lib "DLBT.dll" (ByVal hDownloader As Long) As Long
Declare Function DLBT_Downloader_GetPieceSize Lib "DLBT.dll" (ByVal hDownloader As Long) As Long

' 主动保存一次状态文件，通知内部的下载线程后立即返回，是异步操作，可能会有一点延迟才会写
Declare Sub DLBT_Downloader_SaveStatusFile Lib "DLBT.dll" (ByVal hDownloader As Long)

' bOnlyPieceStatus： 是否只保存一些文件分块信息，便于服务器上生成后发给每个客户机；客户机就不用再比较了，直接快速启动. 默认是FALSE，也就是全部信息都保存
Declare Sub DLBT_Downloader_SetStatusFileMode Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal bOnlyPieceStatus As Boolean)

' 查看保存状态文件是否完成
Declare Function DLBT_Downloader_IsSavingStatus Lib "DLBT.dll" (ByVal hDownloader As Long) As Boolean

' // 向BT系统中写入通过其它方式接收来的数据块。offset为该数据块在整个文件（文件夹）中的偏移量，size为数据块大小，data为数据缓冲区
' // 成功返回S_OK，失败为其它，失败原因可能是该块不需要再次传输了。 本函数仅VOD增强版中有效
' DLBT_API HRESULT WINAPI DLBT_Downloader_AddPartPieceData(HANDLE hDownloader, UINT64 offset, UINT64 size, char *data);

' // 手工添加一块完整的数据进来 本函数仅VOD增强版中有效
' DLBT_API HRESULT WINAPI DLBT_Downloader_AddPieceData(
'     HANDLE                  hDownloader,
'     int                     piece,          //分块序号
'     char            *       data,           //数据本身
'     bool                    bOverWrite      //如果已经有了，是否覆盖
'     );


' // 每次要替换一个数据块时调用一下这个回调，外部可以根据这个回调显示替换的进度；以及是否终止整个替换工作（功能相当于：DLBT_Downloader_CancelReplace)
' // 返回FALSE代表希望立即终止，TRUE代表继续。
' // 一个分块可能会包括多个小文件（或者大文件的尾部，多文件粘连的地方），因此一个分块pieceIndex可能会对应了多个文件片段。本回调是替换一个文件片段时触发一次
' typedef BOOL (WINAPI * DLBT_REPLACE_PROGRESS_CALLBACK) (
'       IN void * pContext,                   // 回调的上下文（通过DLBT_Downloader_ReplacePieceData的pContext参数传入），这里传回去，便于外面处理
'                                             // 比如，外部传入一个this指针，回调的时候再通过这个指针知道是对应哪个对象
'       IN int pieceIndex,                    //本次要替换的数据位于哪个分块（分块在torrent中的索引）
'       IN int replacedPieceCount,            //已经完成了多少个piece的替换
'       IN int totalNeedReplacePieceCount,    //总共有多少个要替换的piece分块
'       IN int fileIndex,                     //本次要替换的数据位于哪个文件
'       IN UINT64 offset,                     //在这个文件中，这块数据的偏移量
'       IN UINT64 size,                       //这块数据的总大小（距离偏移量）
'       IN int replacedFileSliceCount,        //已经完成了多少个文件片段的替换
'       IN int totalFileSliceCount            //总共有多少个需要替换的文件片段
'       );

' // 替换数据块的接口：将某块数据直接替换到目标文件的相同位置，一般用于：下载时将需要下载的分块自动下载到一个临时目录，完成后再替换回原始文件
' // 这样下载过程中原始文件可以正常使用，并保留了只下载部分数据的优点。
' // 该函数是立即返回，如果HRESULT返回的不是S_OK，说明出错，需要查看返回值。
' // 如果返回S_OK，则内部会启动线程来进行替换，中间的结果随时通过DLBT_Downloader_GetReplaceResult来进行查看结果。随时可以调用：DLBT_Downloader_CancelReplace进行取消线程操作
' DLBT_API HRESULT WINAPI DLBT_Downloader_ReplacePieceData(
'     HANDLE          hDownloader,        //下载任务句柄
'     int   *         pieceArray,         // 需要将哪些分块替换，是一个int数组
'     int             arrayLength,        // 分块数组的长度
'     LPCSTR          destFilePath,       // 需要替换的文件（文件夹）的目录。比如：E:\Test\1.rar或者E:\Test\Game\天龙八部 等。
'     LPCSTR          tempRootPathName = NULL,    // 临时目录下载时，如果使用了rootPathName，则这里也要设置上，以便从这个文件（文件夹）下读取数据块
'     LPCSTR          destRootPathName = NULL,    // 需要替换的那个下载任务，如果使用了rootPathName，则这里也要设置上，以便对这个文件（文件夹）进行替换
'     LPVOID          pContext = NULL,
'     DLBT_REPLACE_PROGRESS_CALLBACK  callback = NULL  //接收进度，并可以随时取消的回调
'     );

' // ReplacePieceData的一些状态，可以通过DLBT_Downloader_GetReplaceResult来进行查看
' Enum DLBT_REPLACE_RESULT
' {
'     DLBT_RPL_IDLE  = 0,     //尚未开始替换
'     DLBT_RPL_RUNNING,       //正在运行中
'     DLBT_RPL_SUCCESS,       //替换成功
'     DLBT_RPL_USER_CANCELED, //替换了一半，用户取消掉了
'     DLBT_RPL_ERROR,         //出错，可以通过hrDetail来获取详细信息，参考：DLBT_Downloader_GetReplaceResult
' };

' // 获取替换数据的结果
' DLBT_API DLBT_REPLACE_RESULT WINAPI DLBT_Downloader_GetReplaceResult(
'     HANDLE          hDownloader,        //下载任务句柄
'     HRESULT  *      hrDetail,           //如果是有出错，返回详细的出错原因
'     BOOL     *      bThreadRunning      //Replace的整个操作是否结束了（出错也会立即结束的）
'     );

' // 中间随时取消替换数据的操作（不建议取消，因为有可能会替换到一半，这样有些文件是不完整的）
' DLBT_API void WINAPI DLBT_Downloader_CancelReplace(HANDLE hDownloader);

    
    
' ***************************  以下是种子相关的接口 ********************************

Public Enum DLBT_TORRENT_TYPE
    USE_PUBLIC_DHT_NODE = 0
    NO_USE_PUBLIC_DHT_NODE = 1
    ONLY_USE_TRACKER = 2
End Enum

' 创建一个Torrent的句柄，返回内存中种子的句柄
Declare Function DLBT_CreateTorrent Lib "DLBT.dll" (ByVal pieceSize As Long, _
                                                ByVal file As String, _
                                                ByVal publisher As String, _
                                                ByVal publisherUrl As String, _
                                                ByVal comment As String, _
                                                ByVal TorrentType As DLBT_TORRENT_TYPE, _
                                                ByRef nPercent As Long, _
                                                ByRef bCancel As Boolean, _
                                                ByVal minPadFileSize As Long, _
                                                ByVal bUpdateExt As Boolean) As Long
                               
                        
' 指定种子包含的Tracker
Declare Function DLBT_Torrent_AddTracker Lib "DLBT.dll" (ByVal hTorrent As Long, _
                                                ByVal TrackerURL As String, _
                                                ByVal tier As Long) As Long
' 移除种子中的所有Tracker
Declare Sub DLBT_Torrent_RemoveAllTracker Lib "DLBT.dll" (ByVal hTorrent As Long)

' 指定种子可以使用的http源，如果下载的客户端支持http跨协议下载，则会自动从该地址进行下载
Declare Sub DLBT_Torrent_AddHttpUrl Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal httpUrl As String)

' 保存为torrent文件,filePath为路径（包括文件名）, 如果password不为空，则代表需要对种子进行加密
Declare Function DLBT_SaveTorrentFile Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal filePath As String, ByVal password As String, ByVal bUseHashName As Long, ByVal exeName As String) As Long
    
' 释放torrent文件的句柄
Declare Sub DLBT_ReleaseTorrent Lib "DLBT.dll" (ByVal hTorrent As Long)



' 打开一个种子句柄，便于修改或者读取信息进行操作；用完后，需要调用DLBT_ReleaseTorrent释放torrent文件的句柄
' password 标记是否加密种子，如果为Null，则是普通种子，否则是种子的密码，以此密码进行解密
Declare Function DLBT_OpenTorrent Lib "DLBT.dll" (ByVal torrentFile As String, _
                                                  ByVal password As String) As Long
